home page design

--- a/html/patientRegistration.html
+++ b/html/patientRegistration.html
@@ -21,7 +21,7 @@
         class="max-w-2xl w-full h-auto bg-sky-50 p-3 rounded-xl shadow-lg shadow-sky-200/50"
       >
         <h2
-          class="flex items-center justify-center text-3xl font-semibold text-purple-600"
+          class="flex items-center justify-center text-3xl font-semibold text-blue-800"
         >
           Registration Form
         </h2>
@@ -253,7 +253,7 @@
         <p class="mt-2 flex gap-1 items-center justify-center">
           Registered yet?
           <a
-            href="/login"
+            href="/html/login.html"
             class="text-teal-400 font-medium inline-flex space-x-1 items-center hover:text-purple-600"
           >
             <span>Login now</span>
