sidebar and header ui design

--- a/html/login.html
+++ b/html/login.html
@@ -21,7 +21,7 @@
         class="max-w-lg w-full mx-auto bg-sky-50 p-8 rounded-xl shadow-lg shadow-sky-200/50"
       >
         <div class="flex items-center justify-center">
-          <img src="../img/logo.jpg" alt="logo" class="w-20 h-20" />
+          <img src="../img/logo.png" alt="logo" class="w-20 h-20" />
         </div>
         <h2 class="flex items-start text-3xl font-semibold text-blue-800">
           Login Form
