--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
               class="w-full pt-2 flex flex-col md:flex-row items-center justify-center gap-4"
             >
               <img
-                src="../img/doctor.jpg"
+                src="../img/doctor.png"
                 alt="logo"
                 class="w-96 h-96 rounded-md"
               />
@@ -200,7 +200,66 @@
         </section>
 
         <!-- About Us -->
-        <section id="about"></section>
+        <section id="about">
+          <div class="m-4 py-2 border-b-2 border-slate-500 rounded-b-md">
+            <h2
+              class="pt-10 sm:pt-5 md:pt-4 text-center text-2xl font-semibold text-blue-800"
+            >
+              About Us
+            </h2>
+            <div
+              class="w-full pt-2 flex flex-col md:flex-row items-center justify-center gap-4"
+            >
+              <img
+                src="../img/about.png"
+                alt="logo"
+                class="w-96 h-96 rounded-md"
+              />
+              <div class="max-w-2xl mx-10 flex flex-col gap-3">
+                <h3 class="text-xl font-semibold text-sky-500">
+                  At HealthCare Wellness Center, we believe in making healthcare
+                  accessible and convenient for everyone. Our mission is to
+                  connect patients with the right healthcare providers, ensuring
+                  that you receive the best care when you need it most.
+                </h3>
+                <p class="text-base font-normal text-gray-700">
+                  To revolutionize the way people manage their health by
+                  providing a seamless, user-friendly platform that brings
+                  doctors and patients closer together.
+                </p>
+                <p class="text-base font-normal text-gray-700">
+                  We are committed to making your healthcare journey as smooth
+                  as possible. From booking appointments to finding the right
+                  specialist, we prioritize your needs every step of the way.
+                </p>
+                <span class="pl-2 text-base font-normal text-gray-700">
+                  <b>Why Choose Us?</b> <br />
+                  Your health and satisfaction are our top priorities. We tailor
+                  our services to meet your unique healthcare needs.
+                </span>
+                <p class="pl-2 text-base font-normal text-gray-700">
+                  We work with a network of highly qualified doctors, surgeons,
+                  and specialists to ensure you receive top-notch medical care.
+                </p>
+                <p class="pl-2 text-base font-normal text-gray-700">
+                  Our platform is designed to be intuitive and easy to use, so
+                  you can focus on what really matters—your health.
+                </p>
+                <span class="text-base font-normal text-gray-700">
+                  <b>Join Us on Our Journey</b> <br />
+                  Experience a new way of managing your health with HealthCare
+                  Wellness Center. Together, we can make healthcare simpler,
+                  more efficient, and more personalized.
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="my-4">
+            <span class="pl-5 text-base font-normal text-gray-700">
+              ©2024 HealthCare Wellness Center. All rights reserved.
+            </span>
+          </div>
+        </section>
       </div>
     </div>
 
