--- a/html/patientRegistration.html
+++ b/html/patientRegistration.html
@@ -23,7 +23,7 @@
         <h2
           class="flex items-center justify-center text-3xl font-semibold text-blue-800"
         >
-          Registration Form
+          Patient Registration
         </h2>
         <div class="mt-3 mb-3 flex items-center justify-center">
           <img src="../img/patient-icon.png" alt="logo" class="w-20 h-20" />
