--- a/common/header.html
+++ b/common/header.html
@@ -1,6 +1,6 @@
 <div
   id="header"
-  class="w-full mx-auto bg-sky-50 px-4 pt-4 rounded-xl shadow-lg shadow-sky-200/50 z-50"
+  class="w-full mx-auto bg-sky-50 px-4 pt-4 shadow-lg shadow-sky-200/50 z-50"
 >
   <div class="w-full flex justify-between">
     <div class="flex gap-2 items-start">
@@ -13,6 +13,7 @@
       <button
         class="w-20 py-2 font-medium text-white bg-sky-500 shadow-lg shadow-sky-500/50 hover:bg-sky-400 rounded-xl inline-flex space-x-2 items-center justify-center shadow-inner"
         type="button"
+        id="logout-btn"
       >
         Logout
       </button>
