--- a/common/sidebar.html
+++ b/common/sidebar.html
@@ -1,31 +1,31 @@
 <div
   id="sidebar"
-  class="relative z-40 h-screen w-60 bg-white duration-200 ease-in-out shadow-md"
+  class="relative h-screen w-60 bg-white duration-200 ease-in-out rounded-b-md shadow-md shadow-sky-200/50 z-50"
 >
   <div class="px-3 py-4 rounded">
     <ul id="menu-items" class="space-y-2">
       <li>
         <a
-          href="/admin"
-          class="flex items-center p-2 text-base font-semibold rounded-lg group hover:bg-purple-100 hover:text-purple-600"
+          href="/html/bookAppointment.html"
+          class="flex items-center p-2 text-base font-semibold rounded-lg group hover:bg-purple-100 hover:text-blue-600"
         >
-          <span class="text-xl">📊</span>
-          <span class="ml-3">Dashboard</span>
+          <span class="text-xl">📅</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Book Appointment</span>
         </a>
       </li>
       <li>
         <a
-          href="/admin/tasks"
-          class="flex items-center p-2 text-base font-semibold rounded-lg group hover:bg-purple-100 hover:text-purple-600"
+          href="/html/appointmentList.html"
+          class="flex items-center p-2 text-base font-semibold rounded-lg group hover:bg-purple-100 hover:text-blue-600"
         >
-          <span class="text-xl">📝</span>
-          <span class="flex-1 ml-3 whitespace-nowrap">Tasks</span>
+          <span class="text-xl">📋</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Appointment List</span>
         </a>
       </li>
       <li>
         <a
-          href="/admin/profile"
-          class="flex items-center p-2 text-base font-semibold rounded-lg group hover:bg-purple-100 hover:text-purple-600"
+          href="/html/profile.html"
+          class="flex items-center p-2 text-base font-semibold rounded-lg group hover:bg-purple-100 hover:text-blue-600"
         >
           <span class="text-xl">👤</span>
           <span class="flex-1 ml-3 whitespace-nowrap">Profile</span>
