--- a/html/patientRegistration.html
+++ b/html/patientRegistration.html
@@ -20,14 +20,14 @@
       <div
         class="max-w-2xl w-full h-auto bg-sky-50 p-3 rounded-xl shadow-lg shadow-sky-200/50"
       >
+        <div class="flex items-center justify-center">
+          <img src="../img/logo.png" alt="logo" class="w-20 h-20" />
+        </div>
         <h2
-          class="flex items-center justify-center text-3xl font-semibold text-blue-800"
+          class="mb-3 flex items-center justify-center text-3xl font-semibold text-blue-800"
         >
           Patient Registration
         </h2>
-        <div class="mt-3 mb-3 flex items-center justify-center">
-          <img src="../img/patient-icon.png" alt="logo" class="w-20 h-20" />
-        </div>
         <form id="registrationForm">
           <!-- Step 1 -->
           <div class="form-step flex flex-col gap-4">
