--- a/common/doctorProfile.html
+++ b/common/doctorProfile.html
@@ -1,4 +1,136 @@
-<div id="doctor-profile">
-  <h1>Doctor Profile</h1>
-  <p>Welcome, Doctor. Here is your profile information.</p>
+<div
+  class="w-full mx-auto flex items-center justify-center"
+  id="doctor-profile"
+>
+  <div
+    class="max-w-2xl w-full h-auto bg-white p-3 rounded-xl shadow-lg shadow-sky-200/50"
+  >
+    <h2
+      class="my-3 flex items-center justify-center text-xl font-semibold text-blue-800"
+    >
+      Welcome, Doctor. Here is your profile information
+    </h2>
+    <form id="profileForm">
+      <div class="flex flex-col gap-4">
+        <div class="flex flex-col md:flex-row gap-3">
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your first name"
+              name="firstName"
+            />
+          </div>
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your last name"
+              name="lastName"
+            />
+          </div>
+        </div>
+        <div>
+          <input
+            type="password"
+            class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+            placeholder="Enter your password"
+            name="password"
+            id="password"
+          />
+          <span id="error-password" class="pl-2 text-red-500"></span>
+        </div>
+        <div class="flex flex-col md:flex-row gap-3">
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your experience"
+              name="experience"
+            />
+          </div>
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your license number"
+              name="licenseNumber"
+            />
+          </div>
+        </div>
+        <div>
+          <input
+            type="text"
+            class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+            placeholder="Enter your phone"
+            name="phone"
+          />
+        </div>
+        <div>
+          <input
+            type="text"
+            class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+            placeholder="Enter your address"
+            name="fullAddress.addressLine"
+          />
+        </div>
+        <div class="flex flex-col md:flex-row gap-3">
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your city"
+              name="fullAddress.city"
+            />
+          </div>
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your state"
+              name="fullAddress.state"
+            />
+          </div>
+        </div>
+        <div class="flex flex-col md:flex-row gap-3">
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your country"
+              name="fullAddress.country"
+            />
+          </div>
+          <div class="w-full">
+            <input
+              type="text"
+              class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
+              placeholder="Enter your pincode"
+              name="fullAddress.pincode"
+            />
+          </div>
+        </div>
+        <button
+          class="w-full py-3 font-medium text-white bg-blue-500 shadow-lg shadow-blue-500/50 hover:bg-blue-400 rounded-xl inline-flex space-x-2 items-center justify-center shadow-inner"
+          type="submit"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+            />
+          </svg>
+          <span>Submit</span>
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
