--- a/html/doctorRegistration.html
+++ b/html/doctorRegistration.html
@@ -65,7 +65,9 @@
                 class="w-full p-3 text-lg text-gray-700 font-normal border-2 border-cyan-100 border-b-cyan-300 focus:border-cyan-500 focus:outline-none hover:shadow-md bg-transparent rounded-md"
                 name="specializationId"
                 id="specialization"
-              ></select>
+              >
+                <option value="">Select Speciality</option>
+              </select>
               <span
                 id="error-specializationId"
                 class="pl-2 text-red-500"
