--- a/html/profile.html
+++ b/html/profile.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Profile Page</title>
   </head>
@@ -18,9 +27,7 @@
           class="w-full flex-1 bg-purple-50 p-5 overflow-x-hidden overflow-y-auto"
           id="content"
         >
-          <div id="profile-container">
-            <p>Loading profile...</p>
-          </div>
+          <div id="profile-container"></div>
         </div>
       </div>
     </div>
