--- a/html/index.html
+++ b/html/index.html
@@ -188,7 +188,10 @@
                 class="w-96 h-96 rounded-md"
               />
             </div>
-            <a href="#" class="flex items-start justify-center my-2">
+            <a
+              href="/html/bookAppointment.html"
+              class="flex items-start justify-center my-2"
+            >
               <button
                 class="w-40 py-2 font-medium text-white bg-sky-500 shadow-lg shadow-sky-500/50 hover:bg-sky-400 rounded-xl inline-flex space-x-2 items-center justify-center shadow-inner"
                 type="button"
