--- a/html/bookAppointment.html
+++ b/html/bookAppointment.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Book Appointment</title>
   </head>
@@ -18,8 +27,65 @@
           class="w-full flex-1 bg-purple-50 p-5 overflow-x-hidden overflow-y-auto"
           id="content"
         >
-          <h1>Welcome to the Main Page</h1>
-          <p>This is the main content area.</p>
+          <div id="appointment-container">
+            <h2
+              class="flex items-center justify-center text-2xl font-semibold text-gray-700 uppercase"
+            >
+              Find Doctor & Book An Appointment
+            </h2>
+            <div class="p-1">
+              <div class="mt-2 flex items-center justify-center">
+                <span
+                  class="w-64 py-3 text-black bg-white shadow-md shadow-blue-500/50 rounded-full inline-flex space-x-2 items-center justify-center shadow-inner text-xl font-medium"
+                  >Speciality</span
+                >
+              </div>
+              <form id="appointment-form">
+                <!-- Step 1: Speciality -->
+                <div class="form-step">
+                  <ul
+                    class="grid grid-cols-1 gap-8 px-1 md:grid-cols-2 lg:grid-cols-3 md:p-2 xl:p-4"
+                    id="speciality-list"
+                  ></ul>
+                </div>
+
+                <!-- Step 2: Doctors -->
+                <div class="form-step hidden">
+                  <div
+                    class="grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 p-4 md:p-2 xl:p-5"
+                    id="doctors-list"
+                  ></div>
+                </div>
+
+                <!-- Step 3: Slots -->
+                <div class="form-step hidden">
+                  <div
+                    class="grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 p-4 md:p-2 xl:p-5"
+                    id="slots-list"
+                  ></div>
+                </div>
+
+                <!-- Navigation Buttons -->
+                <div class="flex justify-between mt-4">
+                  <button
+                    type="button"
+                    id="prev-btn"
+                    class="p-2 bg-gray-500 text-white rounded hover:bg-gray-400"
+                    disabled
+                  >
+                    Prev
+                  </button>
+                  <button
+                    type="button"
+                    id="next-btn"
+                    class="p-2 bg-blue-500 text-white rounded hover:bg-blue-400"
+                  >
+                    Next
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
